--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/jamakyework/GymBuddy#readme",
   "dependencies": {
     "angular": "^1.6.1",
+    "angular-route": "^1.6.4",
     "angular-sanitize": "^1.6.1",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.15.2",
